# algokit-templates

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  algokit-utils.ipynb  algokit.toml  digital-marketplace.code-workspace  pyproject.toml  python-hello-world.code-workspace  react-vite-basic.code-workspace  typescript-hello-world.code-workspace
.github/workflows/: check-scripts.yml  on-main-push.yml  on-pr.yml  pr.yml  release.yml  test-examples.yml
base/notebook/: copier.yml
base/workspace-setup/: copier.yaml
basic/: README.md
docs/architecture-decisions/: ADR_001_project_generator_architecture.md
examples/: examples.yml  index.html
examples/algokit-learn/: README.md  algokit-learn.code-workspace
examples/digital-marketplace-smart-contract/: README.md
examples/python-fullstack/: README.md  python-fullstack.code-workspace
examples/python-smart-contract/: README.md  myproject.code-workspace
examples/python-template/: myproject.code-workspace
examples/python-utils-script/: algokit-utils.ipynb  algokit.toml
examples/react-vite/: myproject.code-workspace
examples/react-vite-basic/: README.md  myproject.code-workspace
examples/typescript-fullstack/: README.md  myproject.code-workspace
examples/typescript-smart-contract/: README.md  typescript-smart-contract.code-workspace
examples/typescript-template/: myproject.code-workspace
generators/add-testing/: copier.yaml
generators/create-devcontainer/: copier.yaml
generators/create-env-file/: copier.yml
generators/create-smart-contract/: copier.yaml  copier.yml
projects/algokit-learn-frontend/: package.json  playwright.config.ts
projects/digital-marketplace-contracts/: README.md  pyproject.toml
projects/python-hello-world-frontend/: .algokit.toml  package-lock.json
projects/react-vite-basic-frontend/: .algokit.toml  README.md  package-lock.json
projects/typescript-hello-world-contracts/: README.md
projects/typescript-hello-world-frontend/: .algokit.toml  README.md
scripts/: bootstrap_examples.py  create_examples.py  detect_project.py  merge_algokit_toml.py  merge_dependencies.py  merge_package_json.py  merge_pyproject.py  test_examples.py  update_workspace.py  validate_configuration.py
(+214 files in other folders)
