[project]
name = "algokit-templates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "copier>=9.5.0",
  "fire>=0.7.0",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "tomli>=2.2.1",
  "tomli-w>=1.2.0",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.16.1",
  "pytest-sugar>=1.0.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "types-pyyaml>=6.0.12.20250516",
]


[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
# Add [skip ci] to prevent bot commits from re-triggering workflows
commit_message = "chore: release {version} [skip ci]"

# Branch configuration removed - controlled by GitHub Action parameters

[tool.semantic_release.changelog]
template_dir = "templates"
exclude_commit_patterns = [
    "^Merge pull request",
    "^Update CHANGELOG",
    "^Bump version",
    "^chore: merge main for release",
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.publish]
upload_to_vcs_release = true
