[project]
name = "algokit-utils-python"
version = "0.1.0"
description = ""
authors = [
    {name = "algokit@algorand.foundation"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "algokit-utils (>=4.0.0,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

